     side of a join - it will either ignore them, or error, depending on the
     implementation. See notes when upgrading for more information.
     (Robert Collins)

  INTERNALS:

    * ``bzrlib.transport.Transport.put_file`` now returns the number of bytes
      put by the method call, to allow avoiding stat-after-write or
      housekeeping in callers. (Robert Collins)

   * New method ``bzrlib.osutils.minimum_path_selection`` useful for removing
     duplication from user input, when a user mentions both a path and an item
     contained within that path. (Robert Collins)

   * New method on xml serialisers, write_inventory_to_lines, which matches the
     API used by knits for adding content. (Robert Collins)

   * New helper ``bzrlib.tuned_gzip.bytes_to_gzip`` which takes a byte string
     and returns a gzipped version of the same. This is used to avoid a bunch
     of api friction during adding of knit hunks. (Robert Collins)

   * New parameter yield_parents on ``Inventory.iter_entries_by_dir`` which
     causes the parents of a selected id to be returned recursively, so all the
     paths from the root down to each element of selected_file_ids are
     returned. (Robert Collins)

   * Knit joining has been enhanced to support plain to annotated conversion
     and annotated to plain conversion. (Ian Clatworthy)

  TESTING:


bzr 0.91rc2 2007-09-11
======================

   * Replaced incorrect tarball for previous release; a debug statement was left 
     in bzrlib/remote.py.

bzr 0.91rc1 2007-09-11
======================

  CHANGES:

   * The default branch and repository format has changed to 
     ``dirstate-tags``, so tag commands are active by default.
     This format is compatible with Bazaar 0.15 and later.
     This incidentally fixes bug #126141.
     (Martin Pool)

   * ``--quiet`` or ``-q`` is no longer a global option. If present, it
     must now appear after the command name. Scripts doing things like