@@ -130,6 +130,17 @@ class BzrError(StandardError):
                )
 
 
+class InternalBzrError(BzrError):
+    """Base class for errors that are internal in nature.
+
+    This is a convenience class for errors that are internal. The
+    internal_error attribute can still be altered in subclasses, if needed.
+    Using this class is simply an easy way to get internal errors.
+    """
+
+    internal_error = True
+
+
 class BzrNewError(BzrError):
     """Deprecated error base class."""
     # base classes should override the docstring with their human-
@@ -168,22 +179,18 @@ class AlreadyBuilding(BzrError):
     _fmt = "The tree builder is already building a tree."
 
 
-class BzrCheckError(BzrError):
+class BzrCheckError(InternalBzrError):
     
     _fmt = "Internal check failed: %(message)s"
-
-    internal_error = True
 
     def __init__(self, message):
         BzrError.__init__(self)
         self.message = message
 
 
-class DisabledMethod(BzrError):
+class DisabledMethod(InternalBzrError):
 
     _fmt = "The smart server method '%(class_name)s' is disabled."
-
-    internal_error = True
 
     def __init__(self, class_name):
         BzrError.__init__(self)
@@ -211,11 +218,9 @@ class InProcessTransport(BzrError):
         self.transport = transport
 
 
-class InvalidEntryName(BzrError):
+class InvalidEntryName(InternalBzrError):
     
     _fmt = "Invalid entry name: %(name)s"
-
-    internal_error = True
 
     def __init__(self, name):
         BzrError.__init__(self)
@@ -277,12 +282,10 @@ class NoSuchIdInRepository(NoSuchId):
         BzrError.__init__(self, repository=repository, file_id=file_id)
 
 
-class InventoryModified(BzrError):
+class InventoryModified(InternalBzrError):
 
     _fmt = ("The current inventory for the tree %(tree)r has been modified,"
             " so a clean inventory cannot be read without data loss.")
-
-    internal_error = True
 
     def __init__(self, tree):
         self.tree = tree
@@ -310,19 +313,16 @@ class NotLocalUrl(BzrError):
         self.url = url
 
 
-class WorkingTreeAlreadyPopulated(BzrError):
+class WorkingTreeAlreadyPopulated(InternalBzrError):
 
     _fmt = 'Working tree already populated in "%(base)s"'
-
-    internal_error = True
 
     def __init__(self, base):
         self.base = base
 
+
 class BzrCommandError(BzrError):
     """Error from user command"""
-
-    internal_error = False
 
     # Error from malformed user command; please avoid raising this as a
     # generic exception not caused by user input.
@@ -485,13 +485,11 @@ class DirectoryNotEmpty(PathError):
     _fmt = 'Directory not empty: "%(path)s"%(extra)s'
 
 
-class ReadingCompleted(BzrError):
+class ReadingCompleted(InternalBzrError):
     
     _fmt = ("The MediumRequest '%(request)s' has already had finish_reading "
             "called upon it - the request has been completed and no more "
             "data may be read.")
-
-    internal_error = True
 
     def __init__(self, request):
         self.request = request
@@ -774,11 +772,9 @@ class ForbiddenControlFileError(BzrError):
     _fmt = 'Cannot operate on "%(filename)s" because it is a control file'
 
 
-class LockError(BzrError):
+class LockError(InternalBzrError):
 
     _fmt = "Lock error: %(msg)s"
-
-    internal_error = True
 
     # All exceptions from the lock/unlock functions should be from
     # this exception class.  They will be translated as necessary. The
@@ -922,8 +918,6 @@ class TokenLockingNotSupported(LockError):
 
     _fmt = "The object %(obj)s does not support token specifying a token when locking."
 
-    internal_error = True
-
     def __init__(self, obj):
         self.obj = obj
 
@@ -979,11 +973,9 @@ class StrictCommitFailed(Exception):
     _fmt = "Commit refused because there are unknowns in the tree."
 
 
-class NoSuchRevision(BzrError):
+class NoSuchRevision(InternalBzrError):
 
     _fmt = "%(branch)s has no revision %(revision)s"
-
-    internal_error = True
 
     def __init__(self, branch, revision):
         # 'branch' may sometimes be an internal object like a KnitRevisionStore
@@ -991,12 +983,10 @@ class NoSuchRevision(BzrError):
 
 
 # zero_ninetyone: this exception is no longer raised and should be removed
-class NotLeftParentDescendant(BzrError):
+class NotLeftParentDescendant(InternalBzrError):
 
     _fmt = ("Revision %(old_revision)s is not the left parent of"
             " %(new_revision)s, but branch %(branch_location)s expects this")
-
-    internal_error = True
 
     def __init__(self, branch, old_revision, new_revision):
         BzrError.__init__(self, branch_location=branch.base,
@@ -1063,18 +1053,14 @@ class DivergedBranches(BzrError):
     _fmt = ("These branches have diverged."
             " Use the merge command to reconcile them.")
 
-    internal_error = False
-
     def __init__(self, branch1, branch2):
         self.branch1 = branch1
         self.branch2 = branch2
 
 
-class NotLefthandHistory(BzrError):
+class NotLefthandHistory(InternalBzrError):
 
     _fmt = "Supplied history does not follow left-hand parents"
-
-    internal_error = True
 
     def __init__(self, history):
         BzrError.__init__(self, history=history)
@@ -1084,8 +1070,6 @@ class UnrelatedBranches(BzrError):
 
     _fmt = ("Branches have no common ancestor, and"
             " no merge base revision was specified.")
-
-    internal_error = False
 
 
 class NoCommonAncestor(BzrError):
@@ -1303,11 +1287,9 @@ class VersionedFileInvalidChecksum(VersionedFileError):
     _fmt = "Text did not match its checksum: %(message)s"
 
 
-class KnitError(BzrError):
+class KnitError(InternalBzrError):
     
     _fmt = "Knit error"
-
-    internal_error = True
 
 
 class KnitCorrupt(KnitError):
@@ -1378,13 +1360,11 @@ class TransportError(BzrError):
         BzrError.__init__(self)
 
 
-class TooManyConcurrentRequests(BzrError):
+class TooManyConcurrentRequests(InternalBzrError):
 
     _fmt = ("The medium '%(medium)s' has reached its concurrent request limit."
             " Be sure to finish_writing and finish_reading on the"
             " currently open request.")
-
-    internal_error = True
 
     def __init__(self, medium):
         self.medium = medium
@@ -1581,24 +1561,20 @@ class GraphCycleError(BzrError):
         self.graph = graph
 
 
-class WritingCompleted(BzrError):
+class WritingCompleted(InternalBzrError):
 
     _fmt = ("The MediumRequest '%(request)s' has already had finish_writing "
             "called upon it - accept bytes may not be called anymore.")
-
-    internal_error = True
 
     def __init__(self, request):
         self.request = request
 
 
-class WritingNotComplete(BzrError):
+class WritingNotComplete(InternalBzrError):
 
     _fmt = ("The MediumRequest '%(request)s' has not has finish_writing "
             "called upon it - until the write phase is complete no "
             "data may be read.")
-
-    internal_error = True
 
     def __init__(self, request):
         self.request = request
@@ -1613,11 +1589,9 @@ class NotConflicted(BzrError):
         self.filename = filename
 
 
-class MediumNotConnected(BzrError):
+class MediumNotConnected(InternalBzrError):
 
     _fmt = """The medium '%(medium)s' is not connected."""
-
-    internal_error = True
 
     def __init__(self, medium):
         self.medium = medium
@@ -1700,11 +1674,9 @@ class NoFinalPath(BzrError):
         self.root_trans_id = transform.root
 
 
-class BzrBadParameter(BzrError):
+class BzrBadParameter(InternalBzrError):
 
     _fmt = "Bad parameter: %(param)r"
-
-    internal_error = True
 
     # This exception should never be thrown, but it is a base class for all
     # parameter-to-function errors.
@@ -2094,11 +2066,9 @@ class RootNotRich(BzrError):
     _fmt = """This operation requires rich root data storage"""
 
 
-class NoSmartMedium(BzrError):
+class NoSmartMedium(InternalBzrError):
 
     _fmt = "The transport '%(transport)s' cannot tunnel the smart protocol."
-
-    internal_error = True
 
     def __init__(self, transport):
         self.transport = transport
@@ -2136,12 +2106,10 @@ class GhostRevisionUnusableHere(BzrError):
         self.revision_id = revision_id
 
 
-class IllegalUseOfScopeReplacer(BzrError):
+class IllegalUseOfScopeReplacer(InternalBzrError):
 
     _fmt = ("ScopeReplacer object %(name)r was used incorrectly:"
             " %(msg)s%(extra)s")
-
-    internal_error = True
 
     def __init__(self, name, msg, extra=None):
         BzrError.__init__(self)
@@ -2153,11 +2121,9 @@ class IllegalUseOfScopeReplacer(BzrError):
             self.extra = ''
 
 
-class InvalidImportLine(BzrError):
+class InvalidImportLine(InternalBzrError):
 
     _fmt = "Not a valid import statement: %(msg)\n%(text)s"
-
-    internal_error = True
 
     def __init__(self, text, msg):
         BzrError.__init__(self)
@@ -2165,12 +2131,10 @@ class InvalidImportLine(BzrError):
         self.msg = msg
 
 
-class ImportNameCollision(BzrError):
+class ImportNameCollision(InternalBzrError):
 
     _fmt = ("Tried to import an object to the same name as"
             " an existing object. %(name)s")
-
-    internal_error = True
 
     def __init__(self, name):
         BzrError.__init__(self)
@@ -2242,12 +2206,10 @@ class SubsumeTargetNeedsUpgrade(BzrError):
         self.other_tree = other_tree
 
 
-class BadReferenceTarget(BzrError):
+class BadReferenceTarget(InternalBzrError):
 
     _fmt = "Can't add reference to %(other_tree)s into %(tree)s." \
            "%(reason)s"
-
-    internal_error = True
 
     def __init__(self, tree, other_tree, reason):
         self.tree = tree
@@ -2323,8 +2285,6 @@ class UnexpectedEndOfContainerError(ContainerError):
 
     _fmt = "Unexpected end of container stream"
 
-    internal_error = False
-
 
 class UnknownRecordTypeError(ContainerError):
 
@@ -2358,11 +2318,9 @@ class DuplicateRecordNameError(ContainerError):
         self.name = name
 
 
-class NoDestinationAddress(BzrError):
+class NoDestinationAddress(InternalBzrError):
 
     _fmt = "Message does not have a destination address."
-
-    internal_error = True
 
 
 class SMTPError(BzrError):
